# toy-serving-architecture

./: README.md  docker-compose.yml
producer/: Dockerfile
service-a/: Dockerfile  pyproject.toml
