[tool.poetry]
name = "toy-serving-architecture"
version = "0.1.0"
description = ""
authors = ["Iván Cañaveral <canaveral.ivan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi-cli = "^0.0.1"
uvicorn = "^0.18.3"
fastapi = "^0.82.0"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.0"
mypy = "^0.971"

[tool.pylint.messages_control]
max-line-length = 79

[tool.black]
line-length = 79

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
